--- a/Index.html
+++ b/Index.html
@@ -259,7 +259,7 @@
                     </div>
                     <div class="text ms-3 ">
                         <h3 class="fs-5">Phone</h3>
-                        <p class="text-muted">9344864197</p>
+                        <p class="text-muted">+91 9344864197</p>
                     </div>
                 </div>
                 <div class="contact-item d-flex mt-3">
@@ -315,6 +315,9 @@
     </div>
  </section>
 
+ <div>
+
+ </div>
     
 
 
